--- a/src/app/main/components/canvas/canvas.component.html
+++ b/src/app/main/components/canvas/canvas.component.html
@@ -1,3 +1,3 @@
 <div class="container-canvas" #canvasContainer>
-    <div [class]="'canvas ' + tool" #canvas></div>
+    <canvas width="480" height="480" #canvas [class]="'canvas ' + tool"></canvas>
 </div>
