--- a/src/app/main/components/canvas/canvas.component.scss
+++ b/src/app/main/components/canvas/canvas.component.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    .canvas {
+    canvas {
         width: 30rem;
         height: 30rem;
         background-color: white;
