--- a/src/app/main/components/canvas/canvas.component.html
+++ b/src/app/main/components/canvas/canvas.component.html
@@ -1,3 +1,3 @@
 <div class="container-canvas" #canvasContainer>
-    <canvas width="500" height="500" #canvas [class]="'canvas ' + tool"></canvas>
+    <canvas #canvas [class]="'canvas ' + tool"></canvas>
 </div>
