--- a/src/app/main/components/canvas/canvas.component.scss
+++ b/src/app/main/components/canvas/canvas.component.scss
@@ -7,12 +7,11 @@
     justify-content: center;
     align-items: center;
     canvas {
-        // width: 30rem;
-        // height: 30rem;
-        background-color: white;
-        border-radius: 2px;
-        box-shadow: 1px 1px 5px 1px #0000007d;
-        position: relative;
+        background-color: rgb(200, 200, 200);
+        // background-color: white;
+        // border-radius: 2px;
+        // box-shadow: 1px 1px 5px 1px #0000007d;
+        // position: relative;
 
         &.rectangle {
             cursor: crosshair;
